<resources>
    <string name="app_name">Kartičky</string>
    <string name="tv_available_cards_label">Dostupné karty</string>
    <string name="sw_autodetect_label">Detekovat automaticky</string>
    <string name="location_permission_required_title">Přístup k poloze</string>
    <string name="location_permission_required_message">Funkce automatické detekce používá informace o blízkých sítích Wi-Fi, k čemuž je potřeba povolit přístup k přesné poloze zařízení.</string>
    <string name="notification_channel_name">Návrhy karet</string>
    <string name="notification_title">Navržená věrnostní karta</string>
    <string name="notification_text">Kliknutím zobrazíte kartu pro nedalekou prodejnu řetězce %1$s.</string>
    <string name="notification_enable_title">Povolit notifikace?</string>
    <string name="notification_enable_message">Chcete aplikaci povolit zobrazení (nezvonících) oznámení, když je některá z karet připravena k použití v blízké prodejně?</string>
    <string name="background_location_permission_title">Přístup k poloze na pozadí</string>
    <string name="background_location_permission_message">Jelikož váš operační systém považuje zjišťování blízkých sítí Wi-Fi za práci s polohou zařízení, je pro funkci doporučování karet potřeba povolit přístup k poloze na pozadí. To se bohužel musí udělat ručně, a to výběrem možnosti \"%1$s\" v sekci \"Poloha\" v oprávněních aplikace.</string>
    <string name="open_settings">Otevřít nastavení</string>
    <string name="background_location_permission_option_default">Povolit vždy</string>
    <string name="do_not_show_again">Znovu nezobrazovat</string>
    <string name="enable">Zapnout</string>
    <string name="code_generation_error">Chyba vykreslování kódu</string>
    <string name="remote_config_updating">Probíhá aktualizace dat…</string>
    <string name="remote_config_last_update">Poslední aktualizace dat: %1$s</string>
    <string name="remote_config_error">Aktualizace dat se nezdařila (%1$s).</string>
    <string name="remote_config_incompatible">Formát dat na serveru není kompatibilní.</string>
    <string name="background_location_permission_message_again">Aplikace má povolený přístup k poloze pouze na popředí. Chcete-li, aby funkce oznámení o blízkých prodejnách pracovala, jak má, je třeba v nastavení polohy vybrat možnost \"%1$s\".</string>
    <string name="minutes_unit_label">minut</string>
    <string name="tv_wlan_check_interval_label">› Kontrolovat každých</string>
    <string name="sw_use_notifications_label">Oznámení o doporučených kartách</string>
    <string name="settings_save">Uložit</string>
    <string name="title_settings">Nastavení</string>
    <string name="dbm_unit_label">dBm</string>
    <string name="tv_min_wlan_signal_label">Min. signál Wi-Fi pro detekci</string>
    <string name="background_scan_unsupported_title">Nepodporované zařízení</string>
    <string name="background_scan_unsupported_message">Skenování sítí Wi-Fi na pozadí je bohužel možné až od Androidu verze 10, kterou vaše zařízení nepodporuje.</string>
    <string name="gdpr_title"><u>GDPR</u></string>
    <string name="gdpr_message">Aplikace žádné vaše údaje nikam neodesílá a nepoužívá soubory cookies ani jiná špehovací udělátka.</string>
    <string name="update_action">Zobrazit</string>
    <string name="update_available">Je dostupná nová verze aplikace</string>
    <string name="url_open_error">Nepodařilo se otevřít URL.</string>
    <string name="btn_blacklist">Nefunguje</string>
    <string name="code_not_available">Pro tento řetězec momentálně není dostupná žádná karta, nebo jsou všechny zakázané.</string>
    <string name="blacklist_title">Zakázat kartu</string>
    <string name="blacklist_message">Pokud vám tato karta nefunguje a nemáte naději, že se to v dohledné době změní, můžete ji zakázat a aplikace příště automaticky vybere jinou.</string>
    <string name="blacklist_add">Ano, zakázat</string>
    <string name="btn_blacklist_management">Zakázané karty</string>
    <string name="tv_cards_title">Karty</string>
    <string name="title_blacklist_management">Zakázané karty</string>
    <string name="blacklist_empty_placeholder">Seznam zakázaných karet je prázdný.</string>
    <string name="app_version_format">Verze %1$s/%2$s</string>
    <string name="code_not_compatible">Nekompatibilní kód.</string>
    <string name="code_bad_checksum">Kontrolní součet kódu se neshoduje.</string>
    <string name="code_bad_format">Nesprávný formát kódu.</string>
    <string name="error">Chyba</string>
    <string name="camera_error_message">Inicializace fotoaparátu selhala.</string>
    <string name="title_import_method_choice">Zvolte způsob nahrání karty</string>
    <string name="code_camera_permission_rationale">Pro skenování čárových kódů potřebuje aplikace přístup k fotoaparátu.</string>
    <string name="grant_permission">Autorizovat</string>
    <string name="import_method_scan_code">Naskenovat fotoaparátem</string>
    <string name="import_method_pick_file">Vybrat z galerie</string>
    <string name="import_method_manual_input">Zadat kód ručně</string>
    <string name="confirm">Potvrdit</string>
    <string name="reading_code">Čtení kódu</string>
    <string name="error_reading_code">Nebyl nalezen platný kód typu %1$s.</string>
    <string name="enter_code">Zadejte kód karty</string>
    <string name="add_card">Přidat kartu</string>
    <string name="title_import_card">Přidat kartu</string>
    <string name="btn_personal_cards">Moje karty</string>
    <string name="personal_cards_empty_placeholder">Zatím jste nepřidali žádnou osobní kartu.</string>
    <string name="title_personal_cards">Osobní karty</string>
    <string name="personal_card_desc_format">%1$s (osobní)</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="nfc_aid" translatable="false">F0110CA4DBEAC011</string>
    <string name="card_export_service_desc">Sdílení věrnostních karet</string>
    <string name="card_export_aid_desc">Odeslat kartu přes NFC</string>
    <string name="btn_enable_nfc">Zapnout</string>
    <string name="btn_scan_again">Načíst další</string>
    <string name="btn_finish">Dokončit</string>
    <string name="nfc_read_error">Chyba NFC přenosu (%1$s).</string>
    <string name="nfc_import_finished">Přijato %1$d karet.</string>
    <string name="nfc_enable_prompt">Pro zahájení přenosu je potřeba zapnout NFC.</string>
    <string name="title_batch_import">Z jiného zařízení</string>
    <string name="nfc_listening">Připraveno na přijetí</string>
    <string name="btn_share_cards">Sdílet karty</string>
    <string name="nfc_not_supported">Vaše zařízení bohužel nepodporuje technologii NFC.</string>
    <string name="nfc_sharing">Sdílení přes NFC je aktivní.\nPřiložte zařízení zády k sobě pro zahájení přenosu.</string>
    <string name="nfc_tag_lost">Připojení není stabilní - zkuste to prosím znovu.</string>
    <string name="nfc_unsupported_protocol">Aplikace nejsou navzájem kompatibilní. Nainstalujte prosím nejnovější verzi.</string>
    <string name="nfc_security_violation">Ujistěte se, že má druhé zařízení odemčenou obrazovku a je v režimu sdílení.</string>
    <string name="invalid_deep_link">Odkaz je neplatný nebo poškozený.</string>
    <string name="incompatible_deep_link">Struktura odkazu je nesprávná nebo není kompatibilní s touto verzí aplikace.</string>
    <string name="transferring_cards">Přenášení karet…</string>
    <string name="success">Úspěch</string>
    <string name="title_export_method_choice">Jak chcete karty sdílet?</string>
    <string name="export_method_nfc">Odeslat pomocí NFC</string>
    <string name="export_method_qr">Zobrazit QR kód</string>
    <string name="export_method_deep_link">Vytvořit odkaz</string>
    <string name="unsupported_operation">Nepodporovaná operace</string>
    <string name="card_link_creation_error">Odkaz se nepodařilo vytvořit. Pravděpodobně se jedná o interní chybu aplikace.</string>
    <string name="open_my_cards">Přejít na moje karty</string>
    <string name="autodetect_provider_initial">Automaticky</string>
    <string name="autodetect_provider_format">Automaticky (%1$s)</string>
    <string name="autodetect_no_provider">nenalezeno</string>
    <string name="autodetect_discovering">zjišťování…</string>
    <string name="share_select_cards">Vyberte karty ke sdílení</string>
    <string name="select_all">Vybrat vše</string>
    <string name="select_none">Resetovat výběr</string>
    <string name="card_action_rename">Přejmenovat</string>
    <string name="card_action_easy_share">Sdílet</string>
    <string name="card_action_remove">Odstranit</string>
    <string name="rename_card_prompt">Zadejte nový název karty</string>
    <string name="card_already_exists_title">Duplicitní karta</string>
    <string name="card_already_exists_desc">V aplikaci je již přidaná jiná karta tohoto řetězce se shodným číslem.</string>
    <string name="title_pick_barcode_type">Vyberte druh čárového/2D kódu</string>
    <string name="title_custom_card">Vlastní karta</string>
    <string name="code_type_ean_13">EAN-13</string>
    <string name="code_type_code_128">Code 128</string>
    <string name="code_type_qr">QR kód</string>
    <string name="code_type_ean_8">EAN-8</string>
    <string name="code_type_aztec">Aztécký kód</string>
    <string name="code_type_codabar">Codabar</string>
    <string name="code_type_data_matrix">Datová matice</string>
    <string name="code_type_code_39">Code 39</string>
    <string name="code_type_code_93">Code 93</string>
    <string name="code_type_itf">ITF</string>
    <string name="code_type_maxicode">Maxicode</string>
    <string name="code_type_pdf417">PDF417</string>
    <string name="code_type_rss_14">RSS-14 (DataBar)</string>
    <string name="code_type_rss_expanded">RSS/DataBar Expanded</string>
    <string name="code_type_upc_a">UPC-A</string>
    <string name="code_type_upc_e">UPC-E</string>
    <string name="code_type_more_options">Další možnosti</string>
    <string name="label_provider_name">Název řetězce</string>
    <string name="label_card_name">Název karty</string>
    <string name="label_details">Podrobnosti</string>
    <string name="label_color">Barva</string>
    <string name="btn_change_color">Změnit barvu</string>
    <string name="btn_save_card">Uložit</string>
    <string name="color_picker_title">Vyberte barvu</string>
    <string name="tab_universal_cards">Univerzální</string>
    <string name="tab_personal_cards">Osobní</string>
    <string name="card_list_empty">Žádné karty</string>
    <string name="btn_reorder_cards">Přeskupit karty</string>
    <string name="cards_sort_by_name">Seřadit podle názvu</string>
    <string name="cards_sort_by_provider">Seřadit podle řetězce</string>
    <string name="autodetect_no_wifi">Wi-Fi je vypnuta</string>
    <string name="error_illegal_code">Zadaný řetězec není platný kód typu %1$s.</string>
</resources>