<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/title_export_method_choice"
        android:textSize="@dimen/text_title_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShareNFC"
        style="@style/ChoiceButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginTop="@dimen/item_margin_l"
        android:text="@string/export_method_nfc"
        app:icon="@drawable/ic_contactless_48px"
        app:layout_constraintBottom_toTopOf="@id/btnShareQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnShareQR"
        style="@style/ChoiceButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_s"
        android:text="@string/export_method_qr"
        android:visibility="gone"
        app:icon="@drawable/ic_qr_code_2_48px"
        app:layout_constraintBottom_toTopOf="@id/btnShareLink"
        app:layout_constraintEnd_toEndOf="@+id/btnShareNFC"
        app:layout_constraintStart_toStartOf="@+id/btnShareNFC"
        app:layout_constraintTop_toBottomOf="@+id/btnShareNFC"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnShareLink"
        style="@style/ChoiceButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_s"
        android:text="@string/export_method_deep_link"
        app:icon="@drawable/ic_link_48px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnShareNFC"
        app:layout_constraintStart_toStartOf="@+id/btnShareNFC"
        app:layout_constraintTop_toBottomOf="@+id/btnShareQR" />
</androidx.constraintlayout.widget.ConstraintLayout>