<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/title_custom_card"
            android:textSize="@dimen/text_title_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/cardBarcodePreview"
            layout="@layout/barcode_sample_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginTop="@dimen/item_margin_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvDetailsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_l"
            android:text="@string/label_details"
            android:textSize="@dimen/text_title_m"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/cardBarcodePreview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProviderName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_s"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvDetailsLabel"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProviderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/label_provider_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCardName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_s"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tilProviderName"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_card_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_s"
            android:text="@string/label_color"
            android:textSize="@dimen/text_title_s"
            app:layout_constraintStart_toStartOf="@+id/tilCardName"
            app:layout_constraintTop_toBottomOf="@+id/tilCardName" />

        <ImageView
            android:id="@+id/ivColorPreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/color_preview_pill"
            android:padding="8dp"
            android:src="@drawable/color_preview_pill"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnChangeColor"
            app:layout_constraintEnd_toStartOf="@+id/btnChangeColor"
            app:layout_constraintStart_toStartOf="@+id/tvColorLabel"
            app:layout_constraintTop_toTopOf="@+id/btnChangeColor"
            tools:tint="@color/card_color_default" />

        <Button
            android:id="@+id/btnChangeColor"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_margin_s"
            android:layout_marginTop="@dimen/item_margin_s"
            android:text="@string/btn_change_color"
            app:layout_constraintEnd_toEndOf="@+id/tilCardName"
            app:layout_constraintStart_toEndOf="@id/ivColorPreview"
            app:layout_constraintTop_toBottomOf="@+id/tvColorLabel"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/btn_save_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeColor"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>