<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivStatusImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvStatusText"
        app:layout_constraintVertical_chainStyle="packed"
        tools:srcCompat="@drawable/ic_contactless_animated" />

    <TextView
        android:id="@+id/tvStatusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Stav přenosu"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="@dimen/item_margin_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStatusImage"
        app:layout_constraintBottom_toTopOf="@id/llButtons" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@id/tvStatusText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnEnableNfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_enable_nfc"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnImportMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button"
            android:text="@string/btn_scan_again"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>